test/pos/bug49.scala
class C1(x: Object) {};

class C2 extends C1({ class A extends Object {}; (new A) : Object }) {};
