test/neg/bug44.scala
abstract class C {
  var x: Object { def t: Int; } = new Object() {
    def t: Int = 1;
  }
}
